--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CombuApp"
         tools:targetApi="31">
-        
-        <activity android:name=".InicioActivity"
+
+        <activity android:name=".activoActivity"
             android:exported="true"
             android:theme="@style/Theme.CombuApp.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+
+        <activity android:name=".InicioActivity"
+            android:exported="true"
+            android:theme="@style/Theme.CombuApp.NoActionBar">
         </activity>
         <activity android:name=".loginActivity"
             android:exported="true"
@@ -30,6 +35,10 @@
             android:theme="@style/Theme.CombuApp.NoActionBar">
         </activity>
         <activity android:name=".CrearReporteActivity"
+            android:exported="true"
+            android:theme="@style/Theme.CombuApp.NoActionBar">
+        </activity>
+        <activity android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.CombuApp.NoActionBar">
         </activity>
