--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,8 @@ materialVersion = "1.11.0"
 firebaseDatabase = "21.0.0"
 firebaseAuth = "23.2.0"
 googleGmsGoogleServices = "4.4.2"
+firebaseFirestoreKtx = "25.1.2"
+firebaseDatabaseKtx = "21.0.0"
 
 [libraries]
 androidx-appcompat-v1612 = { module = "androidx.appcompat:appcompat", version.ref = "androidxAppcompat" }
@@ -26,6 +28,8 @@ material-v1110 = { module = "com.google.android.material:material", version.ref 
 firebase-database = { group = "com.google.firebase", name = "firebase-database", version.ref = "firebaseDatabase" }
 firebase-auth = { group = "com.google.firebase", name = "firebase-auth", version.ref = "firebaseAuth" }
 material-v1120 = { module = "com.google.android.material:material", version.ref = "googleMaterial" }
+firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-firestore-ktx", version.ref = "firebaseFirestoreKtx" }
+firebase-database-ktx = { group = "com.google.firebase", name = "firebase-database-ktx", version.ref = "firebaseDatabaseKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
